sample/deploy/api-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: pelasneakslabacr.azurecr.io/api:1.3.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP # LoadBalancer when not using Istio Gateway
  ports:
  - port: 80
  selector:
    app: api
