sample/deploy/songs-v1-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs-v1-app
  labels:
    app: songs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: songs
  template:
    metadata:
      labels:
        app: songs
        version: v1
    spec:
      containers:
      - name: songs
        image: pelasneakslabacr.azurecr.io/songs:1.0.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: songs
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: songs
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: songs-route
spec:
  hosts:
  - songs
  http:
  - route:
    - destination:
        host: songs
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: songs-v1-route
spec:
  hosts:
  - songs-v1
  http:
  - route:
    - destination:
        host: songs
        subset: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: songs-destination
spec:
  host: songs
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
