sample/deploy/songs-v2-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs-v2-app
  labels:
    app: songs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: songs
  template:
    metadata:
      labels:
        app: songs
        version: v2
    spec:
      containers:
      - name: songs
        image: pelasneakslabacr.azurecr.io/songs:2.0.0
        ports:
        - containerPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: songs-v2-route
spec:
  hosts:
  - songs-v2
  http:
  - route:
    - destination:
        host: songs
        subset: v2
